--- a/vr/index.html
+++ b/vr/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <div class="topnav">
         <a href="index.html"> <img src="images/logo.png" style ="width:50px; height:45px; float:left;"></a>
         <a href="index.html" ><h5>Home page</h5></a>
@@ -32,36 +33,39 @@ function googleTranslateElementInit() {
 
 
 
-<div class="content2">
-  <h2>VR website</h2>
-  
-</div>
 
-<div class="container">
+     <div class="background">
+    <div class="container">
+   
+<div class="content2">
+   <h2>VIRTUAL REALITY</h2>
+</div>
     <div class="img1">
-        <img src="images/vr-p1.jpg" alt="Person in VR headset" style="width:820px;height:540px;">
+        <img src="images/vrp1.png" alt="Person in VR headset" style="width:820px;height:540px;">
     </div>
     <div class="img2">
         <img src="images/vr-p2.png" alt="Women in VR headset" style="width:250px;height:450px;">
     </div>
- <div class="content1">
-    <h3>Some interesting facts about VR:</h3>
+
+        <div class="content1">
+    <h3>What is Virtual Reality?</h3>
     <p>
-    The Sensorama: Precursor to Modern VR: In the 1960s, Morton Heilig developed a machine called the "Sensorama" which could display stereoscopic 3D images, play sound, and even emit smells. Users would sit in front of the machine with their head inside a hood, and they could experience a simulated motorcycle ride through a city. This early invention laid the groundwork for the immersive experiences that VR would later offer.
+        Virtual reality is a technology that has revolutionized the way we interact with computer-generated environments, 
+        immersing users in digital worlds that feel astonishingly real. At the core of this technology is the Head-Mounted Display (HMD), 
+        a wearable device that fits over the eyes and delivers 3D computer-generated visuals. These visuals, 
+        combined with immersive audio that adapts to the user's movements, create a sense of presence, 
+        tricking the brain into believing that the virtual world is real.
     </p> 
     <p>
-    VR in Medicine and Therapy: Virtual reality has found applications beyond entertainment. It's being used in medical training, therapy, and rehabilitation. Surgeons can practice procedures in a virtual environment before performing them on real patients. VR has also been used to help people overcome phobias and anxieties through exposure therapy in a controlled, virtual setting.
-    <p>
-    VR Art and Creativity: VR is not only about gaming and simulations. It has become a platform for artists to create immersive digital artworks. Artists can "paint" in 3D space, sculpt virtual clay, and even collaborate on virtual installations across the globe.
+        To interact with the virtual environment, users typically employ handheld controllers or other input devices that are 
+        tracked by the VR system. This allows users to reach out and interact with virtual objects, navigate through the digital space, 
+        and even perform complex tasks. Some advanced VR setups offer hand tracking, where the system monitors the user's hand movements 
+        without the need for controllers, providing a more natural and immersive experience.
     </p>
-    <p>
-    VR and Remote Collaboration: VR technology is being harnessed for remote collaboration. Teams spread across different locations can meet up in a shared virtual space, making it feel like they're in the same room. This has the potential to transform the way people work together, especially in a world where remote work is becoming more common.
-    </p>
-</div>
-
-
-</div>
-
+        </div>
+     </div>
+    </div>
+   
 <div class="footer"></div>
 
 
